--- a/karaoke_quick/index.scss
+++ b/karaoke_quick/index.scss
@@ -1,8 +1,10 @@
 body {
-	background: hsl(0, 0%, 10%);
+	margin-bottom: 50px;
+	// margin-top: 82px;
 }
 
 table {
+	color: #333;
 	margin: auto;
 	background: white;
 	font-size: 13px;
